TEL-2: Add axios Requests

--- a/resources/styles/el/header.scss
+++ b/resources/styles/el/header.scss
@@ -1,9 +1,10 @@
 .header {
   background: rgb(27, 99, 150);
-  .hola {
+  .request {
     text-align: center;
     .name {
       color: #731b96;
     }
   }
 }
+
